fix: Fix expand/collapse button

--- a/node-content-renderer.scss
+++ b/node-content-renderer.scss
@@ -114,7 +114,7 @@
   border: none;
   background: transparent;
   padding: 0;
-  z-index: 2;
+  z-index: 12;
   position: absolute;
   top: 35%;
   width: 30px;
@@ -131,16 +131,49 @@
     border-left-width: 4px;
     border-right-width: 4px;
     border-top-color: #b0b0b0;
+    opacity: 0;    
   }
 
   &:hover::after {
-    border-top-color: #606060;
+    border-top-color: #ff0000;
+    opacity: 1.0;
   }
 
 }
 
 .expandButton::after {
   transform: translate3d(-50%, -60%, 0) rotateZ(-90deg);
+}
+
+.collapseButtonIcon,
+.expandButtonIcon {
+  &::after {    
+    content: '';
+    appearance: none;
+    border: none;
+    background: transparent;
+    padding: 0;
+
+    position: absolute;
+    transform: translate3d(-120%, 85%, 0);
+    border: solid transparent 5px;
+    border-left-width: 4px;
+    border-right-width: 4px;
+    border-top-color: #b0b0b0;
+    cursor: pointer;    
+    opacity: 0;    
+  }
+
+  &:hover::after {
+    border-top-color: #606060;
+    opacity: 1.0;
+  }
+
+}
+
+.expandButtonIcon::after {
+  transform: translate3d(-85%, 65%, 0) rotateZ(-90deg);  
+  opacity: 0.0;
 }
 
 /**
@@ -185,3 +218,4 @@
   left: 25%;
   border-left: 1px solid #d0d0e0;
 }
+
